--- a/Open FPS Overlay/MainWindow.xaml
+++ b/Open FPS Overlay/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="OFO" Height="100" Width="150" ResizeMode="NoResize">
     <Grid>
-        <Button Content="Bind Key" HorizontalAlignment="Center" Margin="0,30,0,0" VerticalAlignment="Center" Width="60" Grid.ColumnSpan="3" Grid.Column="2" Click="Button_Click"/>
-        <TextBlock HorizontalAlignment="Center" Margin="0,0,0,25" TextWrapping="Wrap" Text="HotKey" VerticalAlignment="Center" Width="122" TextAlignment="Center" Grid.ColumnSpan="4" Grid.Column="1"/>
+        <Button Content="Bind Key" HorizontalAlignment="Center" Margin="0,30,0,0" VerticalAlignment="Center" Width="60" Click="Button_Click"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,0,0,25" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" TextAlignment="Center" Background="#FFD4D4D4"/>
 
     </Grid>
 </Window>
